@@ -112,6 +112,14 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.2</version>
+                <configuration>
+                    <argLine>--add-modules=okhttp3,com.fasterxml.jackson.databind</argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
